Fixed alignment of tree arrow icons for Internet Explorer. Fixes #3871

--- a/web/pgadmin/static/scss/_aci_tree.overrides.scss
+++ b/web/pgadmin/static/scss/_aci_tree.overrides.scss
@@ -70,9 +70,9 @@
 }
 .aciTree .aciTreeInode >.aciTreeLine .aciTreePush,
 .aciTree .aciTreeInode >.aciTreeLine .aciTreePush.aciTreeHover {
-  background-position: 6px 6px !important;
+  background-position: 6px center !important;
 }
 .aciTree .aciTreeOpen >.aciTreeLine .aciTreePush,
 .aciTree .aciTreeOpen >.aciTreeLine .aciTreePush.aciTreeHover {
-  background-position: -14px 5px !important;
+  background-position: -14px center !important;
 }
